kitten/reported_bugs/rust/rust-78922/stderr.txt
error[E0423]: expected value, found crate `std`

 --> mutant.rs:6:1

  |

6 | std :: < 0 > ;

  | ^^^^^^^^^^^^ not a value



error[E0107]: wrong number of const arguments: expected 0, found 1

 --> mutant.rs:4:36

  |

4 | let _ : u32 = 5i32 . try_into :: < 32 > ( ) . unwrap ( ) ;

  |                                    ^^ unexpected const argument



error[E0599]: no method named `f` found for struct `S` in the current scope

 --> mutant.rs:5:5

  |

2 | struct S ;

  | ---------- method `f` not found for this

...

5 | S . f :: < 0 > ( ) ;

  |     ^ method not found in `S`



thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', compiler/rustc_metadata/src/rmeta/decoder.rs:945:54

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (25f6938da 2020-11-09) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=1 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=1 --crate-type staticlib



query stack during panic:

#0 [generics_of] computing generics of `std`

#1 [opt_const_param_of] computing the optional const parameter of `main::{constant#2}`

end of query stack

error: aborting due to 3 previous errors



Some errors have detailed explanations: E0107, E0423, E0599.

For more information about an error, try `rustc --explain E0107`.

